corrected changes prior to starting stretch goals

--- a/css/index.css
+++ b/css/index.css
@@ -75,12 +75,16 @@ h1, h2, h3, h4, h5 {
         display: flex;
         flex-direction: column-reverse;
     }
-    .container .top-nav-bar {
+    #logo-img {
         display: flex;
-        flex-direction: column-reverse;
+        margin: 0% auto;
+    }
+    .container #tablet-nav {
+        display: flex;
+        flex-direction: row;
         padding: 5%;
     }
-    .container .top-nav-bar a:link {
+    .container #tablet-nav a:link {
         color: black;
         text-decoration: none;
         padding: 3%;
@@ -104,12 +108,12 @@ h1, h2, h3, h4, h5 {
     .container { 
        width: 500px;
     }
-    .container .top-nav-bar {
+    .container nav #tablet-nav {
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column;
         padding: 5%;
     }
-    .container .top-nav-bar a:link {
+    .container #tablet-nav a:link {
         width: 100%;
         color: black;
         text-decoration: none;
@@ -117,6 +121,10 @@ h1, h2, h3, h4, h5 {
         border-top: 1px solid gray;
         border-bottom: 1px solid gray;
         text-align: center;
+    }
+    #logo-img {
+        display: flex;
+        margin: 0% auto;
     }
     #header-img {
         display: none;
@@ -192,16 +200,18 @@ h2 {
 	width: 90%;
 	text-align: left;
 }
-
-.tablet-nav {
+.container nav {
+    display: flex;
+    margin: 0% auto;
+}
+#tablet-nav {
     display: flex;
     justify-content: space-between;
     width: 100%;
     margin: 0 auto;
     padding: 2%;
-    align-items: center;
 }
-.tablet.nav a:link {
+#tablet.nav a:link {
 	color: black;
 	text-decoration: none;
 	padding: 2% auto;
